--- a/about.html
+++ b/about.html
@@ -1,11 +1,7 @@
 ---
 layout: page
-title: About
-description: About Jewish book finds
+title: About this blog
 background: '/img/bg-about.jpg'
 ---
 
-<p>Like finding and reading Jewish books and other historical artifacts</p>
-
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p>This blog is about sharing my books, historical Jewish artifacts and general interest in modern Jewish history.</p>
