--- a/_posts/2020-09-22-sefarim-printed-in-Shanghai-during-WW-II.html
+++ b/_posts/2020-09-22-sefarim-printed-in-Shanghai-during-WW-II.html
@@ -1,8 +1,7 @@
 ---
 layout: post
-title: "this is my first post"
-subtitle: "Problems"
-date: 2020-01-31 10:45:13 -0400
+title: "Sefarim printed in Shanghai during WW II"
+subtitle: "A few sfarim that were printed after the war in Shanghai, China"
 background: '/img/posts/06.jpg'
 ---
 
