--- a/_posts/2020-09-22-sefarim-printed-in-Shanghai-during-WW-II.html
+++ b/_posts/2020-09-22-sefarim-printed-in-Shanghai-during-WW-II.html
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: "Sefarim printed in Shanghai during WW II"
-subtitle: "A few sfarim that were printed after the war in Shanghai, China"
-background: '/img/posts/06.jpg'
+subtitle: "Here are a few sfarim that were printed during/after the war in Shanghai, China"
 ---
 
 <p>I'd like to continue last post's focus on material from WW II. The following four sefarim are not from the DP camps but rather from Shanghai and from Mir in NY right after the war. Hopefully the next few posts will continue on WW II subject matter, with some sefarim printed by the American army for their soldiers, some Yidish and Hebrew books about the concentration camps written right after the war, and some general sefarim printed in the DP camps.</p>
@@ -11,7 +10,9 @@ background: '/img/posts/06.jpg'
 <p>Number one is a soft cover Ramban that says printed by Mir. The seller insisted it was printed in Shanghai, although I can't find any reference to that in the sefer itself. Lesson learned - be more vigilant and only buy something you can verify, at least to some minimal extent.</p>
 
 <img class="img-fluid" src='/img/posts/rambanwwii1.jpg' alt="ramban Shanghai mir">
+
 <img class="img-fluid" src='/img/posts/rambanwwii4.jpg' alt="ramban Shanghai mir">
+
 <img class="img-fluid" src='/img/posts/rabanwwii2.jpg' alt="ramban Shanghai mir">
 
 
@@ -20,7 +21,9 @@ background: '/img/posts/06.jpg'
 <p>Next is a shita mekubetzes on Nedarim printed by Yeshivas Mir in NY in 1947. Rabbi Avroham Kalmonowitz writes a very nice introduction about the importance of torah and how when the yeshiva was in Shanghai during the war and had extremely little to live on, they spent whatever they could to print sefarim.  The same when they came to NY; printing sefarim was one of the first things they did - even before they had a building for the yeshiva.</p>
 
 <img class="img-fluid" src='/img/posts/shitawwii.jpg' alt="shita mekubetzes Shanghai mir">
+
 <img class="img-fluid" src='/img/posts/shitawwii2.jpg' alt="shita mekubetzes Shanghai mir">
+
 <img class="img-fluid" src='/img/posts/shitawwii3.jpg' alt="shita mekubetzes Shanghai mir">
 
 <h2 class="section-heading">Maayana Shel Torah</h2>
@@ -28,12 +31,19 @@ background: '/img/posts/06.jpg'
 <p>Below is "Torah Kval" (Mayana shel Torah) in Yiddish, (two volumes; Bereishis, Shemos & Vayikra in one and the last two in the second volume) printed by Agudath Yisroel in Shanghai 1945. A couple of notes. 1. It has a clear name - seems it belonged to a Yechiel Efraim Halevi Shainwack.  2. This printing was dedicated to the author of the sefer who was killed by the Nazis in the Warsaw ghetto in 1943. 3. In the back of the first volume there is a gift note from a friend who signs off "Your brother in pain" 1946. It's hard to make out the complete name of the gifter.</p>
 
 <img class="img-fluid" src='/img/posts/kvallwwii13.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvallwwii11.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvallwwii1.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvallwwii14.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvalwwii4.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvallwwii2.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvallwwii2.jpg' alt="Maayanah shel torah ww ii">
+
 <img class="img-fluid" src='/img/posts/kvallwwii3.jpg' alt="Maayanah shel torah ww ii">
 
 
@@ -42,6 +52,8 @@ background: '/img/posts/06.jpg'
 <p>Last is a Gemara Bechoros printed in Shanghai in about 1942. What is interesting is that it has a hand written name - Avroham Arbuz with a date, 8 Cheshvon 5703 (October 19, 1942). It then has a stamp that this sefer was from the property of the Bachur Avroham Yitzchak Yisroel Ben Tzvi Arbuz, a talmid of Mir who was niftar on 13 Shevat 5706 (January 15, 1946) in Shanghai. Sad. Couldn't find much online about this Arbuz, other than his name on a <a href="http://search.archives.jdc.org/multimedia/Documents/Names%20Databank/Mirrer%20Yeshiva/Additional%20Links/Complete_AR33-44_00053_00960.pdf">list of Mir talmidim</a> (page 4 - number 97) and that apparently there are a plenty more sefarim with his name out there, as many people online also mention having sefarim with his name.</p>
 
 <img class="img-fluid" src='/img/posts/talmud1.jpg' alt="talmud Shanghai mir">
+
 <img class="img-fluid" src='/img/posts/talmud2.jpg' alt="talmud Shanghai mir">
+
 <img class="img-fluid" src='/img/posts/talmud3.jpg' alt="talmud Shanghai mir">
 
