--- a/_posts/2020-09-22-sefarim-printed-in-Shanghai-during-WW-II.html
+++ b/_posts/2020-09-22-sefarim-printed-in-Shanghai-during-WW-II.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Sefarim printed in Shanghai during WW II"
-subtitle: "Here are a few sfarim that were printed during/after the war in Shanghai, China"
+subtitle: "Here are a few sefarim that were printed during/after the war in Shanghai, China"
 ---
 
 <p>I'd like to continue last post's focus on material from WW II. The following four sefarim are not from the DP camps but rather from Shanghai and from Mir in NY right after the war. Hopefully the next few posts will continue on WW II subject matter, with some sefarim printed by the American army for their soldiers, some Yidish and Hebrew books about the concentration camps written right after the war, and some general sefarim printed in the DP camps.</p>
