moshe sherrer post

--- a/about.html
+++ b/about.html
@@ -4,4 +4,5 @@ title: About this blog
 background: '/img/bg-about.jpg'
 ---
 
-<p>This blog is about sharing my books, historical Jewish artifacts and general interest in modern Jewish history.</p>
+<p>The goal of this blog is to record and share pictures, notes and questions about (mostly) old (mostly) Jewish books. 
+These are books I primarily find on the $1 or free shelf at used book stores as well as yard sales and flee markets.</p>
