--- a/_posts/2020-09-02-sefarim-printed-in-Shanghai-during-WW-II.html
+++ b/_posts/2020-09-02-sefarim-printed-in-Shanghai-during-WW-II.html
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "Sefarim printed in Shanghai during WW II"
-categories: wwii
+title: "Sefarim printed right after WW II"
+categories: wwii, dp camp, 1940s
 permalink: "shanghai-sefarim-wwii"
 ---
 
-<p>I'd like to continue last post's focus on material from WW II. The following four sefarim are not from the DP camps but rather from Shanghai and from Mir in NY right after the war. Hopefully the next few posts will continue on WW II subject matter, with some sefarim printed by the American army for their soldiers, some Yidish and Hebrew books about the concentration camps written right after the war, and some general sefarim printed in the DP camps.</p>
+<p>I'd like to continue last post's focus on material from post WW II. The following four sefarim are not from the DP camps but rather from Shanghai and from Mir in NY right after the war. Hopefully I'll do some future posts on WW II subject matter, with some sefarim printed by the American army for their soldiers, some Yidish and Hebrew books about the concentration camps written right after the war, and some general sefarim printed in the DP camps.</p>
 <h2 class="section-heading">Ramban</h2>
 
 <p>Number one is a soft cover Ramban that says printed by Mir. The seller insisted it was printed in Shanghai, although I can't find any reference to that in the sefer itself. Lesson learned - be more vigilant and only buy something you can verify, at least to some minimal extent.</p>
