--- a/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
+++ b/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "DP Camp newspaper - Netzach Yisroel"
-categories: wwii, dpcamp, newspaper
+categories: wwii, dpcamp, newspaper, 1940s
 permalink: "dpcamp-newspaper-netzach-yisroel"
 ---
 
