--- a/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
+++ b/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "Rabbi Moshe Sherer works to free jewish hostages of 1970 hijacking"
-categories: hutner, moshe sherrer
-permalink: "dpcamp-newspaper-netzach-yisroel"
+categories: hutner, moshe sherrer, 1970s
+permalink: "moshe-sherrer-hostage-diary"
 ---
 
 
