--- a/_posts/2020-09-06-jewish-welfare-board-publications.html
+++ b/_posts/2020-09-06-jewish-welfare-board-publications.html
@@ -14,10 +14,20 @@ with a name & rank or some note written on the inside cover.</p>
 Here are some of the basics:
 
 
-<img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard1.jpg' alt="jewish welfare board siddur">
-<p></p>
-<img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard2.jpg' alt="jewish welfare board siddur">
-<p></p>
+
+<div class="row">
+    <div class="img-float">
+        <img src='/img/posts/jewishwelfareboard1.jpg' alt="jewish welfare board siddur" style="width:100%"><p></p>
+    </div>
+    <div class="img-float">
+<img src='/img/posts/jewishwelfareboard2.jpg' alt="jewish welfare board siddur" style="width:100%"><p></p>
+    </div>
+</div>
+
+
+
+
+
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard3.jpg' alt="jewish welfare board siddur">
 <p></p>
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard4.jpg' alt="jewish welfare board siddur">
