--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,12 @@
+---
+layout: page
+title: Contact Me
+description: Have any questions? Feel free to reach out.
+background: '/img/bg-contact.jpg'
+form: true
+---
+
+
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
