more testing with welfare board post

--- a/_posts/2020-09-06-jewish-welfare-board-publications.html
+++ b/_posts/2020-09-06-jewish-welfare-board-publications.html
@@ -13,21 +13,11 @@ with a name & rank or some note written on the inside cover.</p>
 
 Here are some of the basics:
 
-
-
-<div class="row">
-    <div class="img-float">
-        <img src='/img/posts/jewishwelfareboard1.jpg' alt="jewish welfare board siddur" style="width:100%"><p></p>
-    </div>
-    <div class="img-float">
-<img src='/img/posts/jewishwelfareboard2.jpg' alt="jewish welfare board siddur" style="width:100%"><p></p>
-    </div>
-</div>
-
-
-
-
-
+<p></p>
+<img class="img-fluid mx-auto d-block float-lg-left" src='/img/posts/jewishwelfareboard1copy.jpg' alt="jewish welfare board siddur">
+<p></p>
+<img class="img-fluid mx-auto d-block float-lg-right" src='/img/posts/jewishwelfareboard2copy.jpg' alt="jewish welfare board siddur">
+<p></p>
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard3.jpg' alt="jewish welfare board siddur">
 <p></p>
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard4.jpg' alt="jewish welfare board siddur">
