idf post title update

--- a/_posts/2020-09-15-Rabbi-Goren-IDF-siddur-machzor-tanach.html
+++ b/_posts/2020-09-15-Rabbi-Goren-IDF-siddur-machzor-tanach.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Rabbi Goren and the IDF Rabbinate"
+title: "IDF Siddur, Machzor and Tanach"
 categories: israel, siddur, goren, idf
-permalink: "Rabbi-Goren-and-the-IDF-Rabbinate"
+permalink: "Rabbi-Goren-IDF-siddur-machzor-tanach"
 ---
 
 
