chumash german translation post

--- a/_posts/2020-09-05-Jewish German Almanac 1935.html
+++ b/_posts/2020-09-05-Jewish German Almanac 1935.html
@@ -6,11 +6,12 @@ permalink: "Jewish-German-almanac-1930s"
 ---
 
 
-<p>This wasn't an extremely interesting find, but still cool. It's a pair of Jewish almanacs in German from 1935 and 1936. 
+This wasn't an extremely interesting find, but still cool. It's a pair of Jewish almanacs in German from 1935 and 1936. 
 There seems to be a range of essays on different aspects and topics of Judaism and Zionism. One page that was particularly 
 interesting was the list of global Jewish occupancy in the 1936 pamphlet (last image below). The almanacs were published by 
 Schocken Verlag - a publishing company founded and owned by Salman (Zalman) Schocken. Salman eventually moved to 
-Palestine and purchased the Ha'aretz newspaper. His descendants still have a 60% stake in the paper. You can read more about him on <a href=https://en.wikipedia.org/wiki/Salman_Schocken> wikipedia</a>.
+Palestine and purchased the Ha'aretz newspaper. His descendants still have a 60% stake in the paper. You can read more about him 
+on <a href=https://en.wikipedia.org/wiki/Salman_Schocken>wikipedia</a>.
 <p></p>
 
 <h2 class="section-heading">1935 almanac:</h2>
