--- a/about.html
+++ b/about.html
@@ -7,4 +7,4 @@ background: '/img/bg-about.jpg'
 <p>The goal of this blog is to record and share pictures, notes and questions about <em>mostly</em> old, <em>mostly</em> Jewish and <em>mostly</em> books.
 
 <p></p>
-These are books I primarily find at used book stores on the $1 or free shelf, at yard sales and flee markets as well as <a>href=https://www.ebay.com>Ebay</a>.</p>
+These are books I primarily find at used book stores on the $1 or free shelf, at yard sales and flee markets as well as <a href=https://www.ebay.com>Ebay</a>.</p>
