--- a/_posts/2020-09-05-Jewish German Almanac 1935.html
+++ b/_posts/2020-09-05-Jewish German Almanac 1935.html
@@ -1,16 +1,20 @@
 ---
 layout: post
 title: "Jewish German Almanac 1935 & 36 - Almanach des Schocken Verlags"
+description: "Jewish almanac in german from the 1930s. Almanach des Schocken Verlags"
 categories: German, calendar, 1930s
 permalink: "Jewish-German-almanac-1930s"
 ---
 
 
-This wasn't an extremely interesting find, but still cool. It's a pair of Jewish almanacs in German from 1935 and 1936. 
-There seems to be a range of essays on different aspects and topics of Judaism and Zionism. One page that was particularly 
-interesting was the list of global Jewish occupancy in the 1936 pamphlet (last image below). The almanacs were published by 
-Schocken Verlag - a publishing company founded and owned by Salman (Zalman) Schocken. Salman eventually moved to 
-Palestine and purchased the Ha'aretz newspaper. His descendants still have a 60% stake in the paper. You can read more about him 
+This wasn't an extremely interesting find, but still cool. It's a pair of Jewish almanacs in German from 1935 and 1936.
+There seems to be a range of essays on different aspects and topics of Judaism and Zionism. One page that was
+particularly
+interesting was the list of global Jewish occupancy in the 1936 pamphlet (last image below). The almanacs were published
+by
+Schocken Verlag - a publishing company founded and owned by Salman (Zalman) Schocken. Salman eventually moved to
+Palestine and purchased the Ha'aretz newspaper. His descendants still have a 60% stake in the paper. You can read more
+about him
 on <a href=https://en.wikipedia.org/wiki/Salman_Schocken>wikipedia</a>.
 <p></p>
 
