--- a/_posts/2020-09-17-Danish-Siddur-and-seder-Haftorah.html
+++ b/_posts/2020-09-17-Danish-Siddur-and-seder-Haftorah.html
@@ -1,14 +1,17 @@
 ---
 layout: post
 title: "Danish Siddur and Seder Haftorah Early 20th century"
+description: "tefilas yisroel siddur prayer book published in Denmark with Danish translation 1917. "
 categories: Denmark, siddur, Danish
 permalink: "Danish-Siddur-and-seder-Haftorah-early-20th-century"
 ---
 
 
-I recently picked up these two sefarim with Danish translation. First is Siddur Tefilas Yisroel, printed in Copenhagen 1917. 
-Fairly straight forward, but always interesting to see Sefarim from less typical European areas. 
-While quickly flipping through it I noticed that at the end of bentching there's a note to say "Yiru es Hashem" silently. 
+I recently picked up these two sefarim with Danish translation. First is Siddur Tefilas Yisroel, printed in Copenhagen
+1917.
+Fairly straight forward, but always interesting to see Sefarim from less typical European areas.
+While quickly flipping through it I noticed that at the end of bentching there's a note to say "Yiru es Hashem"
+silently.
 Not a big deal, just something that stood out, as it's not mentioned in today's standard bentchers.
 <p></p>
 <img class="img-fluid mx-auto d-block" src='/img/posts/danishsiddur3.jpg' alt="Danish Siddur">
@@ -19,10 +22,13 @@ Not a big deal, just something that stood out, as it's not mentioned in today's 
 <p></p>
 
 
-Next is a Seder Haftoros also printed in Copenhagen but from 1894. It has each week's haftorah along with the Danish translation. 
-The first few pages are a list of names with the header "Subskribentfortegnelse" which seems to mean a writers list of some sort 
-(google translate was no help; spelling must be off or maybe it needs to be broken down to multiple words?). 
-Both translations seem to have been originally done by Rabbi Abraham Alexander Wolf. You can see in the hebrew introduction to the 
+Next is a Seder Haftoros also printed in Copenhagen but from 1894. It has each week's haftorah along with the Danish
+translation.
+The first few pages are a list of names with the header "Subskribentfortegnelse" which seems to mean a writers list of
+some sort
+(google translate was no help; spelling must be off or maybe it needs to be broken down to multiple words?).
+Both translations seem to have been originally done by Rabbi Abraham Alexander Wolf. You can see in the hebrew
+introduction to the
 siddur that his fathers name was Alexander.
 <p></p>
 
