--- a/_posts/2020-09-18-siddur-prayer-for-government.html
+++ b/_posts/2020-09-18-siddur-prayer-for-government.html
@@ -1,17 +1,21 @@
 ---
 layout: post
 title: "הנותן תשועה למלכים... Tefillah for the Government"
+description: "The tefillah prayer we say in shul synagogue for the government - some examples from the past 150 years."
 categories: government, siddur, prayer, tefillah
 permalink: "siddur-prayer-for-government"
 ---
 
 
-Many old siddurim have a tefillah (prayer) for the Government/President/Emperor etc at the beginning of Shabbos or Yom Tove Mussaf davening. 
-It was common for the siddurim to incorporate the name/s of the then present rulers directly into this tefillah. 
-It is always interesting to see the names and families that were included. Many times these rulers were not particularly favorable to 
-the Jews, nevertheless they were included. Seeing those names in print adds a 
-sense of realism and history to these 100 year old siddurim. I’m sure there are siddurim from far more interesting locations with unique or 
-unexpected monarchies in them; but for now this is what I have. Wish I had the time to look up where and when this 
+Many old siddurim have a tefillah (prayer) for the Government/President/Emperor etc at the beginning of Shabbos or Yom
+Tove Mussaf davening.
+It was common for the siddurim to incorporate the name/s of the then present rulers directly into this tefillah.
+It is always interesting to see the names and families that were included. Many times these rulers were not particularly
+favorable to
+the Jews, nevertheless they were included. Seeing those names in print adds a
+sense of realism and history to these 100 year old siddurim. I’m sure there are siddurim from far more interesting
+locations with unique or
+unexpected monarchies in them; but for now this is what I have. Wish I had the time to look up where and when this
 minhag originated, would be interesting to know.
 
 <p></p>
