--- a/_posts/2020-09-19-chumash-with-german-translation.html
+++ b/_posts/2020-09-19-chumash-with-german-translation.html
@@ -1,18 +1,21 @@
 ---
 layout: post
 title: "Chumash with German translation - 1866"
+description: "chumash bible with a german translation from 1866"
 categories: German, Chumash
 permalink: "Chumash-german-translation-1860"
 ---
 
-This Chumash Bamidbar contains just chumash and rashi along with a German translation for each. 
+This Chumash Bamidbar contains just chumash and rashi along with a German translation for each.
 It was printed in Pest, 1866. While in general not of any particular interest, what stands out is the way 
 Targum Unkelus is replaced for a German translation which they referred to as Targum Ashkenazy.
 <p></p>
-The translation was done by <a href=http://www.jewishencyclopedia.com/articles/5120-dessauer-julius>Yehuda/Julius Halevi Dessauer</a> 
+The translation was done by <a href=http://www.jewishencyclopedia.com/articles/5120-dessauer-julius>Yehuda/Julius Halevi
+    Dessauer</a> 
 who apparently translated a few other books as well.
 <p></p>
-Side note: Moses Mendelssohn's family name was originally Dessaur until he had it changed to Mendelssohn. I guess both families originated from Dessau.
+Side note: Moses Mendelssohn's family name was originally Dessaur until he had it changed to Mendelssohn. I guess both
+families originated from Dessau.
 
 <p></p>
 
