--- a/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
+++ b/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
@@ -1,22 +1,24 @@
 ---
 layout: post
 title: "DP Camp newspaper - Netzach Yisroel"
+description: "DP camp Germany jewish newspaper netzach yisroel. Published after the war"
 categories: wwii, dpcamp, newspaper, 1940s
 permalink: "dpcamp-newspaper-netzach-yisroel"
 ---
 
 
-<p>Below are some pages from a Yiddish magazine printed in the DP camps in 1948. 
-It provides a very clear and unique insight to their day to day life - similar to picking up a newspaper today and 
-flipping through it; you walk away with a straightforward snapshot of that day, not someone writing 50 years later 
-trying to reconstruct a bygone era. Since it was a magazine though, the paper quality is terrible and it is really 
-crumbling apart. When I bought this one there was an identical copy also available - don't know what I was thinking 
-but I just took the nicer of the two and left the second one there. Live and learn.... The last page is an index of 
-the articles in this issue. Overall it is very heartening to see the strength and courage that was displayed so soon 
-after the war...</p>
+<p>Below are some pages from a Yiddish magazine printed in the DP camps in 1948.
+    It provides a very clear and unique insight to their day to day life - similar to picking up a newspaper today and
+    flipping through it; you walk away with a straightforward snapshot of that day, not someone writing 50 years later
+    trying to reconstruct a bygone era. Since it was a magazine though, the paper quality is terrible and it is really
+    crumbling apart. When I bought this one there was an identical copy also available - don't know what I was thinking
+    but I just took the nicer of the two and left the second one there. Live and learn.... The last page is an index of
+    the articles in this issue. Overall it is very heartening to see the strength and courage that was displayed so soon
+    after the war...</p>
 <p></p>
-<p>PS - There was no way this wasn't going to entirely fall apart if I kept it at home. I sent it to Amudai Aish in Brooklyn, hopefully they have some 
-benefit from it.
+<p>PS - There was no way this wasn't going to entirely fall apart if I kept it at home. I sent it to Amudai Aish in
+    Brooklyn, hopefully they have some
+    benefit from it.
 </p>
 
 
