--- a/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
+++ b/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
@@ -1,16 +1,19 @@
 ---
 layout: post
 title: "Rabbi Moshe Sherer works to free jewish hostages of 1970 hijacking"
+description: "Story of Rabbi Moshe Sherer's work to release the jewish hostigaes in the Dawson's Field hijacking"
 categories: hutner, moshe sherrer, 1970s
 permalink: "moshe-sherrer-hostage-diary"
 ---
 
 
-<p>These notes by Rabbi Moshe Sherer are from the commemorative album put out by Agudath Israel of America in 1999 - 
-Rabbi Moshe Sherer, his life and his legacy. They detail Rabbi Sherer's efforts to get the last Jewish hostages of 
-the 1970 TWA hijacking (<a href=https://en.wikipedia.org/wiki/Dawson%27s_Field_hijackings> https://en.wikipedia.org/wiki/Dawson%27s_Field_hijackings</a>) home in time for Rosh Hashana.
+<p>These notes by Rabbi Moshe Sherer are from the commemorative album put out by Agudath Israel of America in 1999 -
+    Rabbi Moshe Sherer, his life and his legacy. They detail Rabbi Sherer's efforts to get the last Jewish hostages of
+    the 1970 TWA hijacking (<a href=https://en.wikipedia.org/wiki/Dawson%27s_Field_hijackings>
+        https://en.wikipedia.org/wiki/Dawson%27s_Field_hijackings</a>) home in time for Rosh Hashana.
 <p></p>
-Although this is not a particularly old book, it is a commemorative album which seems somewhat hard to come by. In addition, I found the hour by hour narrative super fascinating.</p>
+Although this is not a particularly old book, it is a commemorative album which seems somewhat hard to come by. In
+addition, I found the hour by hour narrative super fascinating.</p>
 
 
 
