--- a/_posts/2020-09-06-jewish-welfare-board-publications.html
+++ b/_posts/2020-09-06-jewish-welfare-board-publications.html
@@ -1,22 +1,29 @@
 ---
 layout: post
 title: "Jewish Welfare Board Publications"
+description: "Siddur, hagaddah, machzor, bible, chumash and postcards from the JWB - Jewish Welfare Board for Jewish
+soldiers in the army."
 categories: ww ii, jwb
 permalink: "jewish-welfare-board-publications"
 ---
 
 
-<p>Some of the most popular paraphernalia from Jewish soldiers serving in WW I and WW II (and the Korean war?) are books that were printed 
-by the JWB (Jewish Welfare Board) and distributed to Jewish military personnel.  Siddurim, Machzorim, Tanachs, Haggadahs, Megillas and many 
-other books/pamphlets/Jewish guides were printed by the thousands and are fairly easy to pick up today. If you're lucky, you can find one 
-with a name & rank or some note written on the inside cover.</p>
+<p>Some of the most popular paraphernalia from Jewish soldiers serving in WW I and WW II (and the Korean war?) are books
+    that were printed
+    by the JWB (Jewish Welfare Board) and distributed to Jewish military personnel.  Siddurim, Machzorim, Tanachs,
+    Haggadahs, Megillas and many
+    other books/pamphlets/Jewish guides were printed by the thousands and are fairly easy to pick up today. If you're
+    lucky, you can find one
+    with a name & rank or some note written on the inside cover.</p>
 
 Here are some of the basics:
 
 <p></p>
-<img class="img-fluid mx-auto d-block float-lg-left" src='/img/posts/jewishwelfareboard1copy.jpg' alt="jewish welfare board siddur">
+<img class="img-fluid mx-auto d-block float-lg-left" src='/img/posts/jewishwelfareboard1copy.jpg'
+    alt="jewish welfare board siddur">
 <p></p>
-<img class="img-fluid mx-auto d-block float-lg-right" src='/img/posts/jewishwelfareboard2copy.jpg' alt="jewish welfare board siddur">
+<img class="img-fluid mx-auto d-block float-lg-right" src='/img/posts/jewishwelfareboard2copy.jpg'
+    alt="jewish welfare board siddur">
 <p></p>
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard3.jpg' alt="jewish welfare board siddur">
 <p></p>
@@ -42,9 +49,10 @@ This is interesting - they used Tefillah K'tzarah for Shemonah Esrei........
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard12-2.jpg' alt="jewish welfare board siddur">
 <p></p>
 
-A couple of cute postcards - would be really cool to have one that actually has a hand written message.... 
-Apparently these were given to the soldiers as they returned to America; they'd send them to their families letting them know 
-they were back on American soil and were heading home. Interesting details about the different types of postcards 
+A couple of cute postcards - would be really cool to have one that actually has a hand written message....
+Apparently these were given to the soldiers as they returned to America; they'd send them to their families letting them
+know
+they were back on American soil and were heading home. Interesting details about the different types of postcards
 <a href=http://www.ephemerasociety.org/blog/?p=186> here</a>.
 
 <img class="img-fluid mx-auto d-block" src='/img/posts/jewishwelfareboard13-3.jpg' alt="jewish welfare board siddur">
