--- a/_posts/2020-09-15-Rabbi-Goren-IDF-siddur-machzor-tanach.html
+++ b/_posts/2020-09-15-Rabbi-Goren-IDF-siddur-machzor-tanach.html
@@ -1,24 +1,32 @@
 ---
 layout: post
 title: "IDF Siddur, Machzor and Tanach"
+description: "Rabbi Goren and Siddur, machzor, hagaddah, tanach and other sefarim he published in the IDF"
 categories: israel, siddur, goren, idf
 permalink: "Rabbi-Goren-IDF-siddur-machzor-tanach"
 ---
 
 
-<p>I recently read an <a href=https://www.amazon.com/Might-Strength-Autobiography-Shlomo-Goren/dp/1592644090/ref=as_li_tl?ie=UTF8&tag=61309f-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00072BSS4&linkId=4d3aaa1f25c3f7b255535ae44cc4354b>autobiogrophy</a> on <a href=https://en.wikipedia.org/wiki/Shlomo_Goren>Rabbi Shlomo Goren</a> 
-- the first head of the military Rabbinate of the IDF. 
-The book is mostly taken from a long interview the author had with R Goren in which R Goren is very straight forward and explains 
-the logic behind many of the decisions he made as head of the Rabbinate in the IDF as well as later on as Chief Rabbi of Tel-Aviv 
-and then as Chief Rabbi of Israel. In addition, there are many minor but interesting anecdotes about life in Israel and the Rabbonim 
-in Yerushalayim from pre 1948 through the six day war.</p>
+<p>I recently read an <a
+        href=https://www.amazon.com/Might-Strength-Autobiography-Shlomo-Goren/dp/1592644090/ref=as_li_tl?ie=UTF8&tag=61309f-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00072BSS4&linkId=4d3aaa1f25c3f7b255535ae44cc4354b>autobiogrophy</a>
+    on <a href=https://en.wikipedia.org/wiki/Shlomo_Goren>Rabbi Shlomo Goren</a>
+    - the first head of the military Rabbinate of the IDF.
+    The book is mostly taken from a long interview the author had with R Goren in which R Goren is very straight forward
+    and explains
+    the logic behind many of the decisions he made as head of the Rabbinate in the IDF as well as later on as Chief
+    Rabbi of Tel-Aviv
+    and then as Chief Rabbi of Israel. In addition, there are many minor but interesting anecdotes about life in Israel
+    and the Rabbonim
+    in Yerushalayim from pre 1948 through the six day war.</p>
 <p></p>
-<p>In addition to shabbos, kashrus and burials (three of the main focuses of the IDF Rabbinate) the Rabbinate also prints Siddurim, 
-Machzorim, Haggadahs, Megillas ect for the IDF.</p>
-<p></p> 
-<p>This is an IDF Siddur from 1963; note the abbreviated Shmona Esrei that's included for davening during an emergency. 
-Also, on the title page it has 'Nussach Achid' which was a nusach Rabbi Goren implemented as a single nusach everyone in the Army 
-would use. It is a combination of nusach Ashkenaz, Ari and S'fardi.</p>
+<p>In addition to shabbos, kashrus and burials (three of the main focuses of the IDF Rabbinate) the Rabbinate also
+    prints Siddurim,
+    Machzorim, Haggadahs, Megillas ect for the IDF.</p>
+<p></p>
+<p>This is an IDF Siddur from 1963; note the abbreviated Shmona Esrei that's included for davening during an emergency.
+    Also, on the title page it has 'Nussach Achid' which was a nusach Rabbi Goren implemented as a single nusach
+    everyone in the Army
+    would use. It is a combination of nusach Ashkenaz, Ari and S'fardi.</p>
 <p></p>
 
 <img class="img-fluid mx-auto d-block" src='/img/posts/goren_1.jpg' alt="rabbi goren IDF">
@@ -30,7 +38,8 @@ would use. It is a combination of nusach Ashkenaz, Ari and S'fardi.</p>
 <img class="img-fluid mx-auto d-block" src='/img/posts/goren_4.jpg' alt="rabbi goren IDF">
 <p></p>
 
-This is an IDF machzor printed for Rosh Hashanah 1949 - "The second year of the State of Israel". Rabbi Goren's name is still Goronchik - 
+This is an IDF machzor printed for Rosh Hashanah 1949 - "The second year of the State of Israel". Rabbi Goren's name is
+still Goronchik -
 which is what it originally was until Ben-Gurion asked him to modernize it and remove the "chik".
 <p></p>
 
