--- a/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
+++ b/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
@@ -2,7 +2,8 @@
 layout: post
 title: "Rabbi Moshe Sherer works to free jewish hostages of 1970 hijacking"
 description: "Story of Rabbi Moshe Sherer's work to release the jewish hostigaes in the Dawson's Field hijacking"
-categories: hutner, moshe sherrer, 1970s
+keywords: rabbi Sherer, agudah, moshe sherer
+categories: hutner, moshe sherer, 1970s
 permalink: "moshe-sherrer-hostage-diary"
 ---
 
