--- a/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
+++ b/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
@@ -6,7 +6,10 @@ categories: wwii, dpcamp, newspaper, 1940s
 permalink: "dpcamp-newspaper-netzach-yisroel"
 ---
 
-
+<h1>
+    Yiddish magazine printed in the DP camps in 1948
+</h1>
+<p></p>
 <p>Below are some pages from a Yiddish magazine printed in the DP camps in 1948.
     It provides a very clear and unique insight to their day to day life - similar to picking up a newspaper today and
     flipping through it; you walk away with a straightforward snapshot of that day, not someone writing 50 years later
