--- a/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
+++ b/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "DP Camp newspaper - Netzach Yisroel"
+title: DP Camp newspaper - Netzach Yisroel
 description: "DP camp Germany jewish newspaper netzach yisroel. Published after the war"
 categories: wwii, dpcamp, newspaper, 1940s
 permalink: "dpcamp-newspaper-netzach-yisroel"
