--- a/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
+++ b/_posts/2020-09-01-dp-camp-newspaper-netzach-yisroel.html
@@ -7,7 +7,7 @@ permalink: "dpcamp-newspaper-netzach-yisroel"
 ---
 
 <h1>
-    Yiddish magazine printed in the DP camps in 1948
+    Yiddish newspaper printed in the DP camps, 1948
 </h1>
 <p></p>
 <p>Below are some pages from a Yiddish magazine printed in the DP camps in 1948.
