--- a/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
+++ b/_posts/2020-09-04-moshe-sherrer-twa-hijacking-hutner.html
@@ -1,13 +1,15 @@
 ---
 layout: post
-title: "Rabbi Moshe Sherer works to free jewish hostages of 1970 hijacking"
+title: "Rabbi Moshe Sherer works to free Jewish hostages of 1970 hijacking"
 description: "Story of Rabbi Moshe Sherer's work to release the jewish hostages in the Dawson's Field hijacking"
 keywords: rabbi Sherer, agudah, moshe sherer
 categories: hutner, moshe sherer, 1970s
 permalink: "moshe-sherrer-hostage-diary"
 ---
-
-
+<h1>
+    Rabbi Moshe Sherer's narrative of the hijacking of TWA Flight 741 in 1970 and his ensuing efforts to release Rav Hutner and others. 
+</h1>
+<p></p>
 <p>These notes by Rabbi Moshe Sherer are from the commemorative album put out by Agudath Israel of America in 1999 -
     Rabbi Moshe Sherer, his life and his legacy. They detail Rabbi Sherer's efforts to get the last Jewish hostages of
     the 1970 TWA hijacking (<a
