--- a/_posts/2020-09-02-sefarim-printed-in-Shanghai-during-WW-II.html
+++ b/_posts/2020-09-02-sefarim-printed-in-Shanghai-during-WW-II.html
@@ -7,7 +7,11 @@ categories: wwii, dp camp, 1940s
 permalink: "shanghai-sefarim-wwii"
 ---
 
-<p>I'd like to continue last post's focus on material from post WW II. The following four sefarim are not from the DP
+<h1>
+    Continuation from last post - post WW II sefarim, Mir yeshiva and others 
+</h1>
+<p></p>
+<p>The following four sefarim are not from the DP
     camps but rather from Shanghai and from Mir in NY right after the war. Hopefully I'll do some future posts on WW II
     subject matter, with some sefarim printed by the American army for their soldiers, some Yidish and Hebrew books
     about the concentration camps written right after the war, and some general sefarim printed in the DP camps.</p>
