norfolk post updates 1

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -32,13 +32,13 @@ See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great 
 <p></p>
 3. Chevra Thilim and Gomlei Chesed Cemetery 3508 Bellport Ave, Portsmouth, VA 23704.
 The cemetery is across the street from the above address. The cemetery is L shaped going from Bellport Ave to George Washington Highway. The Bellport side is Chevra Thilim and the George Washington entrance is the Gomlei Chesed part. The door to the cemetery was not locked. 
-<a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery>Find a grave link</a>
+<a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery><u>Link to Findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilimCemetery.jpg' alt="Gomlei Chesed and Chevrah Thilim Cemetery Portsmouth VA">
 <p></p>
 <p></p>
 4. Workmens Circle Cemetery 1123 Railroad Ave, Chesapeake, VA 23324. The cemetery is across the street from the above address. which is almost at the end of a dead end road. The cemetery was locked. 
-<a href=https://www.findagrave.com/cemetery/52740/workmans-circle-cemetery>Find a grave link</a>
+<a href=https://www.findagrave.com/cemetery/52740/workmans-circle-cemetery><u>Link to Findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/workmensCircleCemetery.jpg' alt="Workmens Cemetery Chesapeake VA">
 <p></p>
@@ -57,7 +57,7 @@ The corner stone reads "Erected 1921". I did not notice a Star of David, but the
 <p></p>
 <p></p>
 6. Mikro Kodesh Cemetery 3133 Kemet Rd, Chesapeake, VA 23325. The path that leads to the cemetery is across the street from the above address. The back of the cemetery is slightly visible from Berkley Ave but there's a fence and no gate with lots of overgrown bushes. The cemetery was locked. 
-<a href=https://www.findagrave.com/cemetery/2223938/berkley-cemetery>Find a grave link/a>
+<a href=https://www.findagrave.com/cemetery/2223938/berkley-cemetery><u>Link to Findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodeshCemetery.jpg' alt="Mikro Kodesh cemetery Norfolk VA">
 <p></p>
