norfolk post updates 2

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Photos and directions for old Synagogues and Jewish cemeteries in Norfolk and Portsmouth Virginia.Updated 2021 
+title: Photos and directions to old Synagogues and Jewish cemeteries in Norfolk and Portsmouth Virginia - 2021 
 description: "Up to date photos and directions to old Synagogues and Jewish cemeteries in Norfolk and Portsmouth Virginia"
 categories: USA, synagogues, cemeteries, Virginia
 permalink: "up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries"
@@ -25,20 +25,20 @@ See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great 
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilim.jpg' alt="Chevra Thilim Synagogue Portsmouth VA">
 <p></p>
 <p></p>
-2. Gomlei Chesed 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a corner stone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img>this document</a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
+2. Gomlei Chesed 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a corner stone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u>u></a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/GomleiChesed.jpg' alt="Gomlei Chesed Synagogue Portsmouth VA">
 <p></p>
 <p></p>
 3. Chevra Thilim and Gomlei Chesed Cemetery 3508 Bellport Ave, Portsmouth, VA 23704.
 The cemetery is across the street from the above address. The cemetery is L shaped going from Bellport Ave to George Washington Highway. The Bellport side is Chevra Thilim and the George Washington entrance is the Gomlei Chesed part. The door to the cemetery was not locked. 
-<a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery><u>Link to Findagrave.com</u></a>
+<a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilimCemetery.jpg' alt="Gomlei Chesed and Chevrah Thilim Cemetery Portsmouth VA">
 <p></p>
 <p></p>
 4. Workmens Circle Cemetery 1123 Railroad Ave, Chesapeake, VA 23324. The cemetery is across the street from the above address. which is almost at the end of a dead end road. The cemetery was locked. 
-<a href=https://www.findagrave.com/cemetery/52740/workmans-circle-cemetery><u>Link to Findagrave.com</u></a>
+<a href=https://www.findagrave.com/cemetery/52740/workmans-circle-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/workmensCircleCemetery.jpg' alt="Workmens Cemetery Chesapeake VA">
 <p></p>
@@ -57,7 +57,7 @@ The corner stone reads "Erected 1921". I did not notice a Star of David, but the
 <p></p>
 <p></p>
 6. Mikro Kodesh Cemetery 3133 Kemet Rd, Chesapeake, VA 23325. The path that leads to the cemetery is across the street from the above address. The back of the cemetery is slightly visible from Berkley Ave but there's a fence and no gate with lots of overgrown bushes. The cemetery was locked. 
-<a href=https://www.findagrave.com/cemetery/2223938/berkley-cemetery><u>Link to Findagrave.com</u></a>
+<a href=https://www.findagrave.com/cemetery/2223938/berkley-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodeshCemetery.jpg' alt="Mikro Kodesh cemetery Norfolk VA">
 <p></p>
@@ -65,7 +65,7 @@ The corner stone reads "Erected 1921". I did not notice a Star of David, but the
 <img class="img-fluid mx-auto d-block" src='img/posts/mikrokodeshmap.png' alt="Mikro Kodesh cemetery Norfolk VA">
 <p></p>
 <p></p>
-7. Bnai Israel/United Orthodox Synagogue 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is in use as an orthodox synagogue. The building was originally United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. Corner stone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/>synagogue's website</a>
+7. Bnai Israel/United Orthodox Synagogue 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is in use as an orthodox synagogue. The building was originally United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. Corner stone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/bnaiisraelinside.jpg' alt="bnai israel synagogue Norfolk VA">
 <p></p>
