norfolk post updates 4

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -26,7 +26,7 @@ See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great 
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilim.jpg' alt="Chevra Thilim Synagogue Portsmouth VA">
 <p></p>
 <p></p>
-2. Gomlei Chesed 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a corner stone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u>u></a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
+2. Gomlei Chesed 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a cornerstone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u></a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/GomleiChesed.jpg' alt="Gomlei Chesed Synagogue Portsmouth VA">
 <p></p>
@@ -46,7 +46,7 @@ The cemetery is across the street from the above address. The cemetery is L shap
 <p></p>
 5. Mikro Kodesh Synagogue 411 E Liberty St, Norfolk, VA 23523. 
 The building is now the Church of the Lord Jesus Christ of the Apostolic Faith. It's easy to find. 
-The corner stone reads "Erected 1921". I did not notice a Star of David, but there were Kohanim hands high up on the front of the building. 
+The cornerstone reads "Erected 1921". I did not notice a Star of David, but there were Kohanim hands high up on the front of the building. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodesh.jpg' alt="Mikro Kodesh Synagogue Norfolk VA">
 <p></p>
@@ -66,7 +66,7 @@ The corner stone reads "Erected 1921". I did not notice a Star of David, but the
 <img class="img-fluid mx-auto d-block" src='img/posts/mikrokodeshmap.png' alt="Mikro Kodesh cemetery Norfolk VA">
 <p></p>
 <p></p>
-7. Bnai Israel/United Orthodox Synagogue 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is in use as an orthodox synagogue. The building was originally United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. Corner stone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
+7. Bnai Israel/United Orthodox Synagogue 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is in use as an orthodox synagogue. The building was originally the United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. The cornerstone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/bnaiisraelinside.jpg' alt="bnai israel synagogue Norfolk VA">
 <p></p>
