norfolk post updates 5

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -13,12 +13,12 @@ permalink: "up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-c
 
 <p>Below are seven historic synagogue buildings and cemeteries in Norfolk and Portsmouth VA that I visited in April of 2021. 
 
-This post if not about the history of these locations, rather its intent is to serve as a guide for others visiting Norfolk who are interested in visiting these Jewish historic locations. 
+This post is not about the history of these locations, rather its intent is to serve as a guide for others visiting Norfolk who are interested in visiting these Jewish historic locations. 
 
-I will include whatever information I could quickly find online, but I did not attempt to contact any of the locations in an attempt to view the interiors or get them unlocked. 
+I will include whatever information I could quickly find online, but I did not try to contact any of the locations in an attempt to view the interiors or get them unlocked. 
 <p></p>
 <p></p>
-1. Chevra T'hilim 607 Effingham St, Portsmouth, VA 23704. The building is easy to find. 
+1. <b>Chevra T'hilim</b> 607 Effingham St, Portsmouth, VA 23704. The building is easy to find. 
 When I drove by, it was closed and locked. 
 The synagogue was opened in 1922 and is no longer in use. 
 See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great deal of information about Chevra Thilim and <a href=https://www.jewishmuseumportsmouth.org/>here</a> about the current state of the building which seems to have been converted to a Jewish museum. 
@@ -26,25 +26,25 @@ See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great 
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilim.jpg' alt="Chevra Thilim Synagogue Portsmouth VA">
 <p></p>
 <p></p>
-2. Gomlei Chesed 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a cornerstone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u></a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
+2. <b>Gomlei Chesed</b> 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a cornerstone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u></a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/GomleiChesed.jpg' alt="Gomlei Chesed Synagogue Portsmouth VA">
 <p></p>
 <p></p>
-3. Chevra Thilim and Gomlei Chesed Cemetery 3508 Bellport Ave, Portsmouth, VA 23704.
+3. <b><Chevra Thilim and Gomlei Chesed Cemetery</b> 3508 Bellport Ave, Portsmouth, VA 23704.
 The cemetery is across the street from the above address. The cemetery is L shaped going from Bellport Ave to George Washington Highway. The Bellport side is Chevra Thilim and the George Washington entrance is the Gomlei Chesed part. The door to the cemetery was not locked. 
 <a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilimCemetery.jpg' alt="Gomlei Chesed and Chevrah Thilim Cemetery Portsmouth VA">
 <p></p>
 <p></p>
-4. Workmens Circle Cemetery 1123 Railroad Ave, Chesapeake, VA 23324. The cemetery is across the street from the above address. which is almost at the end of a dead end road. The cemetery was locked. 
+4. <b>Workmens Circle Cemetery</b> 1123 Railroad Ave, Chesapeake, VA 23324. The cemetery is across the street from the above address. which is almost at the end of a dead end road. The cemetery was locked. 
 <a href=https://www.findagrave.com/cemetery/52740/workmans-circle-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/workmensCircleCemetery.jpg' alt="Workmens Cemetery Chesapeake VA">
 <p></p>
 <p></p>
-5. Mikro Kodesh Synagogue 411 E Liberty St, Norfolk, VA 23523. 
+5. <b>Mikro Kodesh Synagogue</b> 411 E Liberty St, Norfolk, VA 23523. 
 The building is now the Church of the Lord Jesus Christ of the Apostolic Faith. It's easy to find. 
 The cornerstone reads "Erected 1921". I did not notice a Star of David, but there were Kohanim hands high up on the front of the building. 
 <p></p>
@@ -57,7 +57,7 @@ The cornerstone reads "Erected 1921". I did not notice a Star of David, but ther
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodeshKohenHands.jpg' alt="Mikro Kodesh Synagogue Norfolk VA">
 <p></p>
 <p></p>
-6. Mikro Kodesh Cemetery 3133 Kemet Rd, Chesapeake, VA 23325. The path that leads to the cemetery is across the street from the above address. The back of the cemetery is slightly visible from Berkley Ave but there's a fence and no gate with lots of overgrown bushes. The cemetery was locked. 
+6. <b>Mikro Kodesh Cemetery</b> 3133 Kemet Rd, Chesapeake, VA 23325. The path that leads to the cemetery is across the street from the above address. The back of the cemetery is slightly visible from Berkley Ave but there's a fence and no gate with lots of overgrown bushes. The cemetery was locked. 
 <a href=https://www.findagrave.com/cemetery/2223938/berkley-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodeshCemetery.jpg' alt="Mikro Kodesh cemetery Norfolk VA">
@@ -66,7 +66,7 @@ The cornerstone reads "Erected 1921". I did not notice a Star of David, but ther
 <img class="img-fluid mx-auto d-block" src='img/posts/mikrokodeshmap.png' alt="Mikro Kodesh cemetery Norfolk VA">
 <p></p>
 <p></p>
-7. Bnai Israel/United Orthodox Synagogue 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is in use as an orthodox synagogue. The building was originally the United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. The cornerstone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
+7. <b>Bnai Israel/United Orthodox Synagogue</b> 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is an active orthodox synagogue. The building was originally the United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. The cornerstone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/bnaiisraelinside.jpg' alt="bnai israel synagogue Norfolk VA">
 <p></p>
