norfolk post updates 6

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -31,7 +31,7 @@ See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great 
 <img class="img-fluid mx-auto d-block" src='img/posts/GomleiChesed.jpg' alt="Gomlei Chesed Synagogue Portsmouth VA">
 <p></p>
 <p></p>
-3. <b><Chevra Thilim and Gomlei Chesed Cemetery</b> 3508 Bellport Ave, Portsmouth, VA 23704.
+3. <b>Chevra Thilim and Gomlei Chesed Cemetery</b> 3508 Bellport Ave, Portsmouth, VA 23704.
 The cemetery is across the street from the above address. The cemetery is L shaped going from Bellport Ave to George Washington Highway. The Bellport side is Chevra Thilim and the George Washington entrance is the Gomlei Chesed part. The door to the cemetery was not locked. 
 <a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
