norfolk post updates 7

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -4,6 +4,7 @@ title: Photos and directions to old Synagogues and Jewish cemeteries in Norfolk 
 description: "Up to date photos and directions to old Synagogues and Jewish cemeteries in Norfolk and Portsmouth Virginia"
 categories: USA, synagogues, cemeteries, Virginia
 permalink: "up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries"
+background: 'img/bg-norfolk.jpg'
 ---
 
 <h1>
